--- a/src/components/Range/Range.css
+++ b/src/components/Range/Range.css
@@ -2,10 +2,22 @@
   flex-grow: 1;
 }
 
+input[type="text"] {
+  background: transparent;
+  font-size: inherit;
+  color: inherit;
+  border: none;
+  outline: none;
+  height: 27px;
+  max-width: 40px;
+  text-shadow: inherit;
+}
+
 .range-header {
   display: flex;
   align-items: flex-end;
   font-size: 1.5rem;
+  line-height: 31px;
   justify-content: center;
   text-shadow: 1px 1px 3px rgba(0,0,0,.7);
   margin-bottom: 30px;
